css/main_style.css
/*
Colorblind safe color palette from colorbrew2.org.
#7b3294 - dark purple
#c2a5cf - light purple
#f7f7f7 - white
#a6dba0 - light green
#008837 - dark green
*/

# header{
  background-color: #a6dba0;
}

h1{
  color: #7b3294;
  padding: 5px;
  margin:0;
}

#body-container{
  background-color:#f7f7f7;
  max-width: 1000px;
  margin: auto;
  height: 100vh;
  border: 2px solid #f7f7f7;
  border-radius: 25px;
  overflow: hidden;
}

body{
  background-color: #c2a5cf;
  color: #008837;
  text-align: center;
  margin:0;
}

#profile-picture{
  float: left;
}

#welcom-text{
  padding-top:25px;
  font-size: 25px;
}

#research-interests {
  text-align: left;
  font-size: 25px;
  position: relative;
  left: 200px;
}

#webmap-reviews{
    text-align: left;
    font-size: 25px;
    position: relative;
      }

#copyright {
  position: absolute;
  width: 1000px;
  text-align: center;
  bottom: 20px;
}

